--- a/scss/app.scss
+++ b/scss/app.scss
@@ -4,14 +4,19 @@
 @import "normalize";
 
 /*
-  ZURB Foundation components:
-  Import the building blocks you need for your project.
-  Reducing the number of imported components will optimize page speed.
+RWB needs to be dark
 */
 
 @import "settings"; // Default settings file. Uncomment each setting you need to change
 
 $primary-color: #ef4523;
+
+// Media Query Ranges
+$small-range: (0em, 64em);
+$medium-range: (64em, 64em);
+$large-range: (64.063em, 90em);
+$xlarge-range: (90.063em, 120em);
+$xxlarge-range: (120.063em, 99999999em);
 
 @import "foundation";
  
@@ -132,16 +137,97 @@ p {
         margin-top: -5px;
     }
 }
+
+// Mobile menu adjustments
+
+@media only screen and (max-width: 1024px) {
+  
+  .header-fill{
+    height: 45px;
+  }
+  
+  .top-bar.padding-on-my-header{
+    padding: 0 0 0 0;
+  }
+ 
+    .top-bar {
+        margin-top: 0;
+        padding: 0;
+        float: none;
+        // MENU BUTTON AND HAMBURGER ICON
+        .toggle-topbar.menu-icon a {
+            color: #222;
+            &:after {
+                box-shadow: 0 10px 0 1px #222, 0 16px 0 1px #222, 0 22px 0 1px #222;
+            }
+        }
+        // LOGO
+        ul.title-area img {
+            margin: -2px 0 0;
+            width: 145px;
+        }
+        .top-bar-section {
+            ul {
+                background: #333;
+                li {
+                    margin-left: 0;
+                }
+                li > a {
+                    background: $primary-color;
+                    border-radius: 0;
+                    font-size: 0.9rem;
+                }
+                // NORMAL BUTTONS
+                li:not(.has-form) a:not(.button) {
+                    background: none;
+                    color: #fff;
+                    padding: 10px 15px;
+                    margin-top: 0;
+                    &:hover {
+                        background: $primary-color;
+                        color: #fff;
+                        margin-top: 0;
+                    }
+                }
+                // ACTIVE BUTTON
+                li.active:not(.has-form) a:not(.button) {
+                    background: $primary-color;
+                    color: #fff;
+                    padding: 10px 15px;
+                    margin-top: 0;
+                    &:hover {
+                        background: lighten($primary-color, 5%);
+                        margin-top: 0;
+                    }
+                }
+            }
+        }
+    }
+    // SMALLER IMAGE
+    .top-bar.padding-on-my-header ul.title-area img {
+        margin: 5px 13px 0;
+        width: 35px;
+    }
+    // EXPANDED TOPBAR MENU
+    .top-bar.expanded {
+        margin-top: 0;
+        padding: 0;
+        float: none;
+        .toggle-topbar.menu-icon a {
+            color: #fff;
+            &:after {
+                box-shadow: 0 10px 0 1px #fff, 0 16px 0 1px #fff, 0 22px 0 1px #fff;
+            }
+        }
+    }
+  
+}
  
  
 /*
    CONTENT SECTION
    ========================================================================== */
    
-.header-fill{
-  background: #fff;
-  height: 135px;
-}
  
  
 .content-section {
