--- a/scss/app.scss
+++ b/scss/app.scss
@@ -32,12 +32,11 @@ $xxlarge-range: (120.063em, 99999999em);
 }
  
 .contain-to-grid {
-    background-color: rgba(255, 255, 255, 0.97);
+    background-color: rgba(0, 0, 0, 0.3);
 }
  
 // FILL USED FOR HEADER
 .header-fill {
-    background: #fff;
     height: 135px;
     .tablet-mobile-logo img {
         padding-top: 30px;
@@ -70,6 +69,12 @@ p {
     padding: 45px 0.9375rem 90px 0.9375rem;
     transition: all 0.5s ease 0.1s;
     // LOGO ADJUSTMENT
+    ul.title-area li{
+      text-transform: uppercase;
+      font-size: 2rem;
+      font-weight: 800;
+      color: $white;
+    }
     ul.title-area img {
         margin: -10px 0 0 0;
         height: 100%;
@@ -89,12 +94,12 @@ p {
         li a:not(.button):hover {
             background: none;
             border-bottom: 2px solid $primary-color;
-            color: #222;
+            color: $iron;
         }
         // MENU ITEM ACTIVE
         li.active a:not(.button) {
             border-bottom: 2px solid $primary-color;
-            color: #222;
+            color: $iron;
             &:hover {
                 background: none;
             }
@@ -103,13 +108,13 @@ p {
             margin-left: 30px;
             background: none;
             a {
-                color: #888;
+                color: $iron;
             }
         }
     }
     // DROPDOWN MENU
     .top-bar-section ul li:hover:not(.has-form) > a {
-        color: #333;
+        color: $iron;
     }
     .top-bar-section li ul.dropdown {
         background: #fff;
@@ -123,13 +128,13 @@ p {
     }
     .top-bar-section li ul.dropdown li a:not(.button):hover, .top-bar-section li ul.dropdown li a:not(.button) {
         background: none;
-        color: #222;
+        color: $iron;
         border-bottom: none;
         padding: 20px -4px 40px 45px;
     }
     .top-bar-section ul.dropdown li:hover:not(.has-form) > a:not(.button) {
         background: none;
-        color: #222;
+        color: $iron;
     }
     // DROPDOWN ARROW
     .has-dropdown > a:after {
@@ -239,7 +244,7 @@ p {
 .out-of-grid{
   margin: 0;
   width: 100%;
-  height: 400px;
+  height: 600px;
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 59%, rgba(0, 0, 0, 0.5) 100%), url("/images/2013_006cn_24-1451332053212.JPG") no-repeat center center;
   background-size: cover;
 }
