--- a/app.css
+++ b/app.css
@@ -8761,29 +8761,31 @@ textarea {
 /* line 437, stdin */
 button#submit-button {
   padding: 0;
-  width: 2.5rem;
-  height: 2.5rem;
+  margin: 0;
+  width: 4rem;
+  height: 4rem;
   background-color: #a0a8a0;
-  border-radius: 50%; }
-  /* line 443, stdin */
+  border-radius: 50%;
+  font-size: 1.5rem; }
+  /* line 445, stdin */
   button#submit-button:hover {
     background-color: #768076; }
 
-/* line 448, stdin */
+/* line 450, stdin */
 .footer-section {
   background: #563f2d;
   min-height: 100px; }
-  /* line 451, stdin */
+  /* line 453, stdin */
   .footer-section p {
     color: #a0a8a0;
     margin-top: 2rem; }
-  /* line 455, stdin */
+  /* line 457, stdin */
   .footer-section h1 {
     color: #a0a8a0;
     font-size: 1.5rem;
     margin-bottom: 2rem; }
 
-/* line 462, stdin */
+/* line 464, stdin */
 section#contact {
   margin: 0;
   max-width: 62.5rem;
@@ -8799,7 +8801,7 @@ section#contact {
   section#contact:after {
     clear: both; }
 
-/* line 469, stdin */
+/* line 471, stdin */
 #map-contain {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -8811,7 +8813,7 @@ section#contact {
   width: 100%;
   height: 25rem; }
 
-/* line 478, stdin */
+/* line 480, stdin */
 #map-contain iframe {
   position: absolute;
   top: 0;
@@ -8819,12 +8821,12 @@ section#contact {
   width: 100% !important;
   height: 100% !important; }
 
-/* line 486, stdin */
+/* line 488, stdin */
 #contact-contain {
   margin: 0 auto;
   max-width: 62.5rem;
   width: 100%;
-  padding-top: 5rem; }
+  padding-top: 2rem; }
   /* line 239, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #contact-contain:before, #contact-contain:after {
     content: " ";
@@ -8832,7 +8834,7 @@ section#contact {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #contact-contain:after {
     clear: both; }
-  /* line 489, stdin */
+  /* line 491, stdin */
   #contact-contain .contact-form {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
@@ -8843,7 +8845,7 @@ section#contact {
     float: none;
     text-align: center; }
 
-/* line 495, stdin */
+/* line 497, stdin */
 #lp-info-contain {
   margin: 0 auto;
   max-width: 62.5rem;
@@ -8855,7 +8857,7 @@ section#contact {
   /* line 240, /Volumes/LaCie2/dev/logan-patrone/bower_components/foundation/scss/foundation/components/_global.scss */
   #lp-info-contain:after {
     clear: both; }
-  /* line 497, stdin */
+  /* line 499, stdin */
   #lp-info-contain #lp-info {
     padding-left: 0.9375rem;
     padding-right: 0.9375rem;
