--- a/scss/app.scss
+++ b/scss/app.scss
@@ -436,10 +436,12 @@ textarea{
 
 button#submit-button{
   padding: 0;
-  width: 2.5rem;
-  height: 2.5rem;
+  margin: 0;
+  width: 4rem;
+  height: 4rem;
   background-color: $lp-gray;
   border-radius: 50%;
+  font-size: 1.5rem;
   &:hover{
     background-color: scale-color($lp-gray, $lightness: -25%);
   }
@@ -485,7 +487,7 @@ section#contact{
 
 #contact-contain{
   @include grid-row();
-  padding-top: 5rem;
+  padding-top: 2rem;
   .contact-form{
     @include grid-column($columns:6, $center:true, $last-column:true);
     text-align: center;
